--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="main.css">
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
 
   <body>
